# TALPlguinFramework

./: CMakeLists.txt  README.md  exports.def
.github/workflows/: build.yml
src/: dllmain.cpp  dllmain.h
